Minor cleanup and lint fixes